fix(mobile): Some issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,12 @@ Version: 1.0
     font-size: 80px !important;
 }
 
+.main-stars {
+    color: white;
+    font-size: 30px !important;
+    margin-top: -35px;
+}
+
 html {
     font-size: 14px;
     font-weight: 400;
@@ -834,7 +840,7 @@ span.close-btn {
     width: 100%;
 }
 
-a.mobile-show {
+.mobile-show {
     display: none;
 }
 
@@ -1708,7 +1714,7 @@ p.excerpt {
 }
 
 .latest-news a.boxed-btn {
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .news-text-box {
